<resources>
    <string name="app_name" translatable="false">Controlpi</string>
    <string name="form_title">New host</string>
    <string name="host.form.confirm">Confirm</string>
    <string name="host_form_cancel">Cancel</string>
    <string name="hosts_bar_title" translatable="false">Hosts</string>
    <string name="no_host_found">Host not found in application</string>
    <string name="connected_to_host">"Successfully connected to "</string>
    <string name="no_connected_to_host">Cannot connect to</string>
    <string name="checking">Checking Connection</string>
    <string name="service_activated">Activated</string>
    <string name="service_disabled">Disabled</string>
    <string name="default_service_name" translatable="false">SERVICE_ERROR</string>
    <string name="activating_service">Activating</string>
    <string name="disabling_service">Disabling</string>
    <string name="error_new_host">Error while introducing new Host</string>
    <string name="error_loading_services">Error while loading services</string>
    <string name="error_establishing_connection">Error while establishing connection</string>
    <string name="deleted">Deleted !</string>
    <string name="error_editing">Error editing</string>
    <string name="error_service_upgrade">Error while service upgrading</string>
    <string name="services_not_found">There is no services available :(</string>
    <string name="host_hint">[host.address | ip]:port</string>
    <string name="user_title">Ssh user :</string>
    <string name="host_title">Host :</string>
    <string name="user_hint">User</string>
    <string name="pass_title">Ssh password :</string>
    <string name="pass_hint">Password</string>
</resources>
